2012-01-20 Jérôme Pasquier  <rainbru@free.fr>

	* src/interdep/gameengine.*: CamelCase(d) and header .hpp(ed).

	* src/client/main.cpp (main): Handles plusings-win.cfg.
	* config/plugins-win32.cfg: created with .dll extensions.

	* po/POTFILES.in: Fix the interdep creation related erros
	due to move gameengine.cpp gamestate.cpp inputmanager.cpp
	from src/maincore/ to src/interdep/.

	* config/resources.cfg (General): Comment out the previous
	directories related enties.
	* configure.in (AC_CONFIG_FILES): Remove generation of
	Makefile(s) for previous directories.
	* data/gui/: old datafiles, maily CEGUI related moved to
	OLD/client_data/ : imagesets, layouts, looknfeel, schemes,
	XMLRefSchema.

2012-01-18 Jérôme Pasquier  <rainbru@free.fr>

	* src/maincore: multiples files move to src/interdep/.
	* src/interdep/: a new libtool convenience library to fix
	circular dependencies between ogreGui/ and maincore/.

2012-01-12 Jérôme Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am: Trying to understand circular dependencies
	with the maincore library.

2011-12-27 Jérôme Pasquier  <rainbru@free.fr>

	* acinclude.m4 (RB_CHECK_LIBFOX): Fix the integer warning when
	testing $FOX_CONFIG and -1
	* configure.in: uses AM_GNU_GETTEXT_VERSION to fix an `autoreconf`
	warning.

2011-12-26 Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/xIdent/: whole directopy move to ../OLD/.

2011-12-17 Jérôme Pasquier  <rainbru@free.fr>

	* IrrClient/: whole directopy move to ../OLD/.

	* svn: many Makefile(s) ignored from various directories.

2011-12-12 Jérôme Pasquier  <rainbru@free.fr>

	* svn: many generated files ignored.

	* various Makefiles: removed from svn repository.

	* src/common/version.cpp (logOptions): logs building options.

2011-12-09 Jerome Pasquier  <rainbru@free.fr>

	* configure.in: BUILD_RELEASE issue fixed.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>

	* RainbruRPG.lsm.in: modified: ready to be submitted.

2011-11-29 Jerome Pasquier  <rainbru@free.fr>
