@@ -391,7 +391,7 @@ exec 6>&1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by RainbruRPG $as_me 0.0.5-213, which was
+This file was extended by RainbruRPG $as_me 0.0.5-214, which was
 generated by GNU Autoconf 2.67.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -440,7 +440,7 @@ Report bugs to <rainbru@users.sourceforge.net>."
 
 ac_cs_config=""
 ac_cs_version="\
-RainbruRPG config.status 0.0.5-213
+RainbruRPG config.status 0.0.5-214
 configured by ./configure, generated by GNU Autoconf 2.67,
   with options \"$ac_cs_config\"
 
@@ -583,7 +583,7 @@ FGREP='/bin/grep -F'
 LD='/usr/bin/ld'
 NM='/usr/bin/nm -B'
 LN_S='ln -s'
-max_cmd_len='805306365'
+max_cmd_len='1572864'
 ac_objext='o'
 exeext=''
 lt_unset='unset'
@@ -1049,7 +1049,7 @@ S["build_os"]="linux-gnu"
 S["build_vendor"]="pc"
 S["build_cpu"]="i686"
 S["build"]="i686-pc-linux-gnu"
-S["ISODATE"]="2012-01-20"
+S["ISODATE"]="2012-01-21"
 S["TAPI_LIBRARY_VERSION"]="1:1:0"
 S["OGREGUI_LIBRARY_VERSION"]="2:0:0"
 S["DESIGN_LIBRARY_VERSION"]="1:0:0"
@@ -1118,8 +1118,8 @@ S["prefix"]="/usr/local"
 S["exec_prefix"]="${prefix}"
 S["PACKAGE_URL"]=""
 S["PACKAGE_BUGREPORT"]="rainbru@users.sourceforge.net"
-S["PACKAGE_STRING"]="RainbruRPG 0.0.5-213"
-S["PACKAGE_VERSION"]="0.0.5-213"
+S["PACKAGE_STRING"]="RainbruRPG 0.0.5-214"
+S["PACKAGE_VERSION"]="0.0.5-214"
 S["PACKAGE_TARNAME"]="rainbrurpg"
 S["PACKAGE_NAME"]="RainbruRPG"
 S["PATH_SEPARATOR"]=":"
@@ -1167,8 +1167,8 @@ cat >"$tmp/defines.awk" <<\_ACAWK ||
 BEGIN {
 D["PACKAGE_NAME"]=" \"RainbruRPG\""
 D["PACKAGE_TARNAME"]=" \"rainbrurpg\""
-D["PACKAGE_VERSION"]=" \"0.0.5-213\""
-D["PACKAGE_STRING"]=" \"RainbruRPG 0.0.5-213\""
+D["PACKAGE_VERSION"]=" \"0.0.5-214\""
+D["PACKAGE_STRING"]=" \"RainbruRPG 0.0.5-214\""
 D["PACKAGE_BUGREPORT"]=" \"rainbru@users.sourceforge.net\""
 D["PACKAGE_URL"]=" \"\""
 D["PACKAGE"]=" \"RainbruRPG\""
