@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ([2.67])
-AC_INIT(RainbruRPG, 0.0.5-213, rainbru@users.sourceforge.net)
+AC_INIT(RainbruRPG, 0.0.5-214, rainbru@users.sourceforge.net)
 dnl Every other copy of the package version number gets its value from here
 AM_INIT_AUTOMAKE(RainbruRPG, 0.0.5)
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
