@@ -65,11 +65,10 @@
   </tr>
 
 <!-- Add here a version when it is finished (when switching to revision++) -->
-  <tr class="regTest2">
-    <td>v0.0.5-213</td>
-    <td>2 dec 2011</td>                               <!-- Date                  -->
-    <td align="right">43&nbsp;836
-      <A NAME="UpNote015" HREF="#Note015"><sup>15</sup></A></td>    <!-- SLOC  -->
+  <tr class="regTest1">
+    <td>v0.0.5-214</td>
+    <td>21 jan. 2012</td>                              <!-- Date                  -->
+    <td align="right">42&nbsp;537</td>                 <!-- SLOC  -->
     <td align="right">13</td>                          <!-- Console count         -->
     <td>220&nbsp;<font color="red">fail</font></td>    <!-- CppUnit unit tests    -->
     <td>50&nbsp;<font color="green">success</font></td><!-- Boost.Test unit tests -->
@@ -79,6 +78,22 @@
     <td><font color="red">No</font></td>               <!-- Win32                 -->
     <td>417</td>                                       <!-- Number of PO msg      -->
     <td><font color="red">Failed</font></td>           <!-- Unit tests result     -->
+  </tr>
+
+  <tr class="regTest2">
+    <td>v0.0.5-213</td>
+    <td>2 dec 2011</td>
+    <td align="right">43&nbsp;836
+      <A NAME="UpNote015" HREF="#Note015"><sup>15</sup></A></td>
+    <td align="right">13</td>
+    <td>220&nbsp;<font color="red">fail</font></td>
+    <td>50&nbsp;<font color="green">success</font></td>
+    <td><font color="red">fail</font></td>
+    <td><font color="red">fail</font></td>
+    <td><font color="red">No</font></td>
+    <td><font color="red">No</font></td>
+    <td>417</td>
+    <td><font color="red">Failed</font></td>
   </tr>
 
   <tr class="regTest1">
