@@ -1,4 +1,4 @@
-@set UPDATED 6 January 2012
+@set UPDATED 21 January 2012
 @set UPDATED-MONTH January 2012
 @set EDITION 0.0.5
 @set VERSION 0.0.5
